# Zygisk_Device_Spoof

./: README.md  build.gradle.kts
.github/workflows/: build.yml
module/: build.gradle.kts
module/src/main/cpp/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  HookManager.cpp  HookManager.h  device_spoof.cpp
module/template/: customize.sh  module.prop  post-fs-data.sh
module/template/webroot/: action.sh  index.html  packages.sh
